# routes/api.php
@@ -7,6 +7,7 @@ use Illuminate\Support\Facades\Route;
 
 Route::get('/changelog', [ChangelogController::class, 'index']);
 
+Route::get('/v1/resource-types', [ResourceTypeController::class, 'index']);
 Route::get('/v1/resource-types/elmo', [ResourceTypeController::class, 'elmo']);
 Route::get('/v1/resource-types/ernie', [ResourceTypeController::class, 'ernie']);
 Route::get('/v1/doc', ApiDocController::class);
